--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
 	<div class="bg-img1 size1 overlay1 p-t-24" style="background-image: url('images/bg01.jpg');">
 		<div class="flex-w flex-sb-m p-l-80 p-r-74 p-b-175 respon5">
 			<div class="wrappic1 m-r-30 m-t-10 m-b-10">
-				<a href="#"><img src="images/icons/logo.png" alt="LOGO"></a>
+				<!-- <a href="#"><img src="images/icons/logo.png" alt="LOGO"></a> -->
+				<h2 class="l1-txt1 p-b-10 respon2">Banuje</h2>
 			</div>
 
-			<div class="flex-w m-t-10 m-b-10">
+			<!-- <div class="flex-w m-t-10 m-b-10">
 				<a href="#" class="size3 flex-c-m how-social trans-04 m-r-6">
 					<i class="fa fa-facebook"></i>
 				</a>
@@ -42,7 +43,7 @@
 				<a href="#" class="size3 flex-c-m how-social trans-04 m-r-6">
 					<i class="fa fa-youtube-play"></i>
 				</a>
-			</div>
+			</div> -->
 		</div>
 
 		<div class="flex-w flex-sa p-r-200 respon1">
@@ -59,7 +60,7 @@
 
 			</div>
 
-			<div class="bg0 wsize1 bor1 p-l-45 p-r-45 p-t-50 p-b-18 p-lr-15-sm">
+			<!-- <div class="bg0 wsize1 bor1 p-l-45 p-r-45 p-t-50 p-b-18 p-lr-15-sm">
 				<h3 class="l1-txt3 txt-center p-b-43">
 					Newsletter
 				</h3>
@@ -84,7 +85,7 @@
 				<p class="s1-txt3 txt-center p-l-15 p-r-15 p-t-25">
 					And don’t worry, we hate spam too! You can unsubcribe at anytime.
 				</p>
-			</div>
+			</div> -->
 		</div>
 	</div>
 
@@ -111,8 +112,8 @@
 			/*Endtime must be > current time*/
 			endtimeYear: 0,
 			endtimeMonth: 0,
-			endtimeDate: 35,
-			endtimeHours: 18,
+			endtimeDate: 29,
+			endtimeHours: 24,
 			endtimeMinutes: 0,
 			endtimeSeconds: 0,
 			timeZone: "" 
